# ChangeLog for dev-perl/Socket6
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Socket6/ChangeLog,v 1.26 2007/03/05 12:26:00 ticho Exp $

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Socket6-0.19.ebuild:
  Stable on x86, bug #169152.

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org> -Socket6-0.11.ebuild,
  Socket6-0.17.ebuild, -Socket6-0.18.ebuild, Socket6-0.19.ebuild:
  Version bump, thanks seemant

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org> Socket6-0.19.ebuild:
  ppc stable

  18 Aug 2006; Michael Cummings <mcummings@gentoo.org> Socket6-0.19.ebuild:
  Marking amd64 stable

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org> Socket6-0.11.ebuild,
  Socket6-0.17.ebuild, Socket6-0.18.ebuild, Socket6-0.19.ebuild:
  Adding perl dep; fixed header; fixed DEPEND

  18 Jul 2006; Bryan Østergaard <kloeri@gentoo.org> Socket6-0.19.ebuild:
  Stable on alpha.

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org> Socket6-0.18.ebuild,
  Socket6-0.19.ebuild:
  Marking sparc stable

  24 Apr 2006; Joshua Kinard <kumba@gentoo.org> Socket6-0.19.ebuild:
  Marked stable on mips.

  19 Mar 2006; Markus Rothe <corsair@gentoo.org> Socket6-0.19.ebuild:
  Stable on ppc64

  26 Feb 2006; Joshua Kinard <kumba@gentoo.org> Socket6-0.19.ebuild:
  Added ~mips to KEYWORDS.

  28 Jan 2006; Markus Rothe <corsair@gentoo.org> Socket6-0.19.ebuild:
  Added ~ppc64

  27 Jan 2006; Michael Hanselmann <hansmi@gentoo.org> Socket6-0.19.ebuild:
  Added to ~hppa.

*Socket6-0.19 (13 Jan 2006)

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org> +Socket6-0.19.ebuild:
  Version bump upstream

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> Socket6-0.18.ebuild:
  add ~ia64

  01 May 2005; Tom Martin <slarti@gentoo.org> Socket6-0.17.ebuild:
  Stable on amd64.

  30 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> Socket6-0.17.ebuild:
  Stable on ppc.
