@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Socket6
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Socket6/ChangeLog,v 1.26 2007/03/05 12:26:00 ticho Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Socket6/ChangeLog,v 1.27 2008/05/21 14:50:45 tove Exp $
+
+*Socket6-0.20 (21 May 2008)
+
+  21 May 2008; Torsten Veller <tove@gentoo.org> +Socket6-0.20.ebuild:
+  Version bump
 
   05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Socket6-0.19.ebuild:
   Stable on x86, bug #169152.
